--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ blockquote { border-left:4px solid #8e939a!important; color:#8e939a!important; p
 /**** TYPOGRAPHY ****/
 h1, h2, h3,h4,h5,h6 { font-family: 'Labrador-B-Regular', sans-serif; color:#472400!important; }
 h1 { 
-	font-size: 6.67em;
+	font-size: 5em;
 	font-weight: 200;
 	letter-spacing: -2px;
 	line-height: 50px;
@@ -774,9 +774,11 @@ header {
 	position:absolute;
 	top:0;
 	left:0;
-	padding:10px 20px;
+	padding:25% 20px;
+	text-align: center;
+
 }
-.grida figcaption h3 {font-size:60px!important; margin:0 0 0px; padding:0;color:#fff!important;  }
+.grida figcaption h3 {font-size:44px!important; margin:0 0 0px; padding:0;color:#fff!important;line-height:45px  }
 .grida figcaption span {
 font-size:15px; line-height:30px!important; 
 	padding:0px;
